Adding NBA Strategy and Recommendations

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "A Financial Institution Lending *",
+  "orgName": "A Lending Institution...",
   "edition": "Developer",
   "description": "Predict Loan Approvals with  Scoring with Einstein Prediction Builder",
   "features": ["EinsteinAnalyticsPlus","EinsteinBuilder","AnalyticsAdminPerms"],
