--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -2,7 +2,7 @@
   "orgName": "A Lending Institution...",
   "edition": "Enterprise",
   "description": "Predict Loan Approvals with  Scoring with Einstein Prediction Builder",
-  "features": ["EinsteinAnalyticsPlus","EinsteinBuilder","AnalyticsAdminPerms"],
+  "features": ["EinsteinAnalyticsPlus","EinsteinBuilder","AnalyticsAdminPerms","EinsteinBuilderFree"],
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
