--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,7 +1,7 @@
 {
   "orgName": "A Lending Institution...",
   "edition": "Developer",
-  "description": "Predict Loan Approvals with  Scoring with Einstein Prediction Builder",
+  "description": "Predict Loan Approvals with Einstein Prediction Builder",
   "features": ["EinsteinAnalyticsPlus","EinsteinBuilder","AnalyticsAdminPerms","EinsteinBuilderFree"],
   "settings": {
     "lightningExperienceSettings": {
