--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -11,10 +11,8 @@
       "enableS1EncryptedStoragePref2": false
     },
     "securitySettings": {
-      "enableAuditFieldsInactiveOwner":true,
-      "passwordPolicies": {
-        "enableSetPasswordInApi": true
-      }
+      "enableAuditFieldsInactiveOwner":true
+      
     },
     "analyticsSettings": {
       "enableInsights": true,
