--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -17,10 +17,8 @@
     "analyticsSettings": {
       "enableInsights": true,
       "enableWaveRecordNavigation":true,
-      "enableWaveReplication":true,
-      "enableWaveTemplate":true
+      "enableWaveReplication":true
     }
-    
   }
 }
 
